# agent-mcp-demos

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent_mcp_demos/src/evals/: README.md  tool_calls.py  world.py
agent_mcp_demos/src/mcp_plus_fasthtml/: server.py
agent_mcp_demos/src/push_button/: README.md  agent.py  game.py  log.py  server.py
