[project]
name = "agent-mcp-demos"
version = "0.1.0"
description = "Demo of agents using MCP tools"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Christoffer Björkskog", email = "christoffer.bjorkskog@novia.fi"}
]
license = {text = "MIT"}
keywords = ["mcp", "agent", "ai", "tools", "demo"]
dependencies = [
    "claudette>=0.3.6",
    "fastmcp>=2.12.5",
    "monsterui>=1.0.30",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-exporter-richconsole>=0.59b0",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-instrumentation-asgi>=0.59b0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-starlette>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pydantic-ai-examples>=1.3.0",
    "pydantic-ai[examples]>=1.3.0",
    "pydantic-evals[logfire]>=1.3.0",
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.12.31",
    "starlette>=0.48.0",
    "typer>=0.20.0",
]
